--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   provider: ^6.0.5
   dio: ^5.3.3
   pretty_dio_logger: ^1.1.1
+  flutter_swiper_view: ^1.1.8
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -28,6 +29,7 @@ flutter:
 
   assets:
     - assets/icons/
+    - assets/images/
 
 
 #  fonts:
