--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,9 @@ dependencies:
   dio: ^5.3.3
   pretty_dio_logger: ^1.1.1
   flutter_swiper_view: ^1.1.8
+  get_it: ^7.6.4
+  smooth_page_indicator: ^1.1.0
+  dots_indicator: ^3.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
